<?xml version="1.0" encoding="utf-8" ?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <variable
            name="viewModel"
            type="com.cyder.atsushi.youtubesync.viewmodel.SignInActivityViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/sign_in_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            app:title="@string/login_title"
            app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
            app:navigationOnClick="@{(v) -> viewModel.onBackButtonClicked()}"
            android:id="@+id/sign_in_tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <EditText
                    android:id="@+id/sign_in_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/email"
                    android:text="@={viewModel.mailAddress}"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/sign_in_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:text="@={viewModel.password}"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/sign_in_submit"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/appBlue"
                    android:text="@string/send_button"
                    android:textColor="@color/appWhite"
                    android:textSize="18sp"
                    android:onClick="@{viewModel::onSignIn}"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>