<?xml version="1.0" encoding="utf-8" ?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.cyder.android.syncpod.viewmodel.UserReportActivityViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/sign_up_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/sign_up_tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
            app:navigationOnClick="@{(v) -> viewModel.onBackButtonClicked()}"
            app:title="@string/user_report_title" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <EditText
                    android:id="@+id/user_report_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:gravity="top"
                    android:hint="@string/user_report_description"
                    android:minLines="5"
                    android:text="@={viewModel.message}" />


                <Button
                    android:id="@+id/sign_up_submit"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/appGreen"
                    android:onClick="@{(v) -> viewModel.onSubmit()}"
                    android:text="@string/send_button"
                    android:textColor="@color/appWhite"
                    android:textSize="18sp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>