<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.cyder.android.syncpod.viewmodel.WelcomeActivityViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_weight="60"
                android:scaleType="centerInside"
                android:src="@mipmap/logo" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="40"
                android:lineSpacingExtra="8sp"
                android:text="@string/first_start_message"
                android:textAlignment="center"
                android:textColor="@color/subtext"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp">

                <Button
                    android:id="@+id/sign_in_link"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="2dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="50"
                    android:background="@color/colorPrimary"
                    android:onClick="@{(v) -> viewModel.onSignInClicked()}"
                    android:text="@string/login_button"
                    android:textColor="@color/appWhite"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/sign_up_link"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="2dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="50"
                    android:background="@color/appBeige"
                    android:onClick="@{(v) -> viewModel.onSignUpClicked()}"
                    android:text="@string/new_register"
                    android:textColor="@color/appWhite"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</layout>
